--- a/GoDeliverFrontEnd/src/index.html
+++ b/GoDeliverFrontEnd/src/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
   <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="https://fonts.googleapis.com/css?family=Metamorphous|Rancho|Lora:400,700i|Audiowide|Cinzel:700|Roboto+Slab" rel="stylesheet">
 </head>
 
 <body>
