--- a/GoDeliverFrontEnd/src/index.html
+++ b/GoDeliverFrontEnd/src/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
   <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
-  <link href="https://fonts.googleapis.com/css?family=Metamorphous|Rancho|Lora:400,700i|Audiowide|Cinzel:700|Roboto+Slab" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Metamorphous|Rancho|Lora:400,700i|Audiowide|Cinzel:700|Roboto+Slab"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -19,7 +20,10 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
-
+  <script src="https://js.stripe.com/v2/"></script>
+  <script type="text/javascript">
+    Stripe.setPublishableKey('pk_test_GelcpnvMN7zYiihpCqp7s7tU');
+  </script>
 </body>
 
 </html>
