--- a/GoDeliverFrontEnd/src/index.html
+++ b/GoDeliverFrontEnd/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width , initial-scale=1">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="http://fonts.googleapis.com/icon?family=Material+Icons">
-  <link href="https://fonts.googleapis.com/css?family=Metamorphous|Rancho|Lora:400,700i|Audiowide|Cinzel:700|Roboto+Slab"
+  <link href="https://fonts.googleapis.com/css?family=Metamorphous|Rancho|Lora:400,700i|Catamarin|Audiowide|Cinzel:700|Dosis|Roboto+Slab"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
